--- a/jednostka_akademicka/src/main/resources/templates/rejestracja.html
+++ b/jednostka_akademicka/src/main/resources/templates/rejestracja.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Rejestracja</title>
     <link th:href="@{/css/style-sing-up.css}"    rel="stylesheet"  type="text/css" />
 </head>
 <body>
-<h1>Register</h1>
+<h1>Rejestracja</h1>
 <form th:action="@{/sing-up}" method="post">
     Login:
     <input type="text" name="username">
