--- a/jednostka_akademicka/src/main/resources/templates/uczelnie.html
+++ b/jednostka_akademicka/src/main/resources/templates/uczelnie.html
@@ -9,10 +9,10 @@
 <body>
     <div align="center">
         <!-- Page header -->
-        <h1>Uczelnie Records</h1>
+        <h1>Uczelnie</h1>
 
         <!-- Enter to a new page -->
-        <a href = "/new">Dodaj nową uczelnie</a>
+        <a href = "/nowa-uczelnia">Dodaj nową uczelnie</a>
 
         <!-- Table -->
         <table border="1" cellpadding="10">
