--- a/jednostka_akademicka/src/main/resources/templates/nowa-uczelnia.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowa-uczelnia.html
@@ -21,7 +21,7 @@
             <!-- Table first  row -->
             <tr>
                 <td>Nazwa</td>
-                <td><input type="text" th:field="*{nazwa}"></td>
+                <td><input type="text" th:field="*{Nazwa}"></td>
             </tr>
             <!-- Second  row -->
             <tr>
