--- a/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
@@ -14,14 +14,14 @@
     <!-- End line/ new line -->
     <br />
 
-    <form action = "#" th:action="@{/save}" th:object="${Jezyk}" method="post">
+    <form action = "#" th:action="@{/save}" th:object="${jezyk}" method="post">
         <!-- Table -->
         <table border="1" cellpadding="6">
 
             <!-- Table first  row -->
             <tr>
                 <td>Kod jezyka</td>
-                <td><input type="text" th:field="*{Kod_jezyka}" />
+                <td><input type="text" th:field="*{kodJezyka}" />
             </tr>
             <!-- Second  row -->
             <tr>
