--- a/jednostka_akademicka/src/main/resources/templates/jezyki.html
+++ b/jednostka_akademicka/src/main/resources/templates/jezyki.html
@@ -23,6 +23,7 @@
             <th>ID</th>
             <th>Kod jezyka</th>
             <th>Nazwa</th>
+            <th>Akcje</th>
         </tr>
         </thead>
 
@@ -32,6 +33,11 @@
             <td th:text="${jezyk.id}">ID</td>
             <td th:text="${jezyk.kodJezyka}">Kod Jezyka</td>
             <td th:text="${jezyk.Nazwa}">Nazwa</td>
+            <td>
+                <a th:href="@{'/edit/' + ${jezyk.id}}">Edit</a>
+                &nbsp;&nbsp;&nbsp;
+                <a th:href="@{'/delete/' + ${jezyk.id}}">Delete</a>
+            </td>
         </tr>
         </tbody>
 
