--- a/jednostka_akademicka/src/main/resources/templates/uczelnie.html
+++ b/jednostka_akademicka/src/main/resources/templates/uczelnie.html
@@ -25,6 +25,7 @@
                     <th>Typ uczelni</th>
                     <th>Rodzaj</th>
                     <th>Numer adresu</th>
+                    <th>Akcje</th>
                 </tr>
             </thead>
 
@@ -36,6 +37,11 @@
                     <td th:text="${uczelnia.typUczelni}">Typ uczelni</td>
                     <td th:text="${uczelnia.rodzaj}">Rodzaj</td>
                     <td th:text="${uczelnia.nrAdresu}">Numer adresu</td>
+                    <td>
+                        <a th:href="/@{'/edit/' + ${uczelnia.id}}">Edit</a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a th:href="/@{'/delete/' + ${uczelnia.id}}">Delete</a>
+                    </td>
                 </tr>
             </tbody>
 
