--- a/jednostka_akademicka/src/main/resources/templates/nowa-uczelnia.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowa-uczelnia.html
@@ -14,7 +14,7 @@
     <!-- End line/ new line -->
     <br />
 
-    <form action = "#" th:action="@{/save}" th:object="${uczelnia}" method="post">
+    <form action = "#" th:action="@{/save}" th:object="${uczelnie}" method="post">
         <!-- Table -->
         <table border="1" cellpadding="10">
 
