--- a/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nowa uczelnia</title>
+    <title>Nowy jezyk</title>
 </head>
 
 <body>
