--- a/jednostka_akademicka/src/main/resources/templates/edytuj-jezyk.html
+++ b/jednostka_akademicka/src/main/resources/templates/edytuj-jezyk.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>Edit Sale</title>
+    <title>Edytuj Jezyk</title>
 </head>
 <body>
 <div align="center">
@@ -15,7 +15,7 @@
         <table border="0" cellpadding="10">
             <tr>
                 <td>ID:</td>
-                <td><input type="text" th:field="*{id}" readonly="readonly" /></td>
+                <td><input type="text" th:field="*{nrJezyka}" readonly="readonly" /></td>
             </tr>
             <tr>
                 <td>Kod jezyka:</td>
