--- a/jednostka_akademicka/src/main/resources/templates/uczelnie.html
+++ b/jednostka_akademicka/src/main/resources/templates/uczelnie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Uczelnie</title>
@@ -32,7 +32,7 @@
             <!-- Table body -->
             <tbody>
                 <tr th:each = "uczelnia: ${ListaUczelni}">
-                    <td th:text="${uczelnia.id}">ID</td>
+                    <td th:text="${uczelnia.nrUczelni}">ID</td>
                     <td th:text="${uczelnia.nazwa}">Nazwa</td>
                     <td th:text="${uczelnia.typUczelni}">Typ uczelni</td>
                     <td th:text="${uczelnia.rodzaj}">Rodzaj</td>
