--- a/jednostka_akademicka/src/main/resources/templates/edytuj-jezyk.html
+++ b/jednostka_akademicka/src/main/resources/templates/edytuj-jezyk.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div align="center">
-    <h1>Edit Sale</h1>
+    <h1>Edytuj Jezyk</h1>
     <br />
-    <form action="#" th:action="@{/update}" th:object="${jezyk}"
+    <form action="#" th:action="@{/jezyki/update}" th:object="${jezyk}"
           method="post">
 
         <table border="0" cellpadding="10">
