--- a/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Nowy jezyk</title>
@@ -14,7 +13,7 @@
     <!-- End line/ new line -->
     <br />
 
-    <form action = "#" th:action="@{/save}" th:object="${jezyk}" method="post">
+    <form action = "#" th:action="@{/jezyki/save}" th:object="${jezyk}" method="post">
         <!-- Table -->
         <table border="1" cellpadding="6">
 
