--- a/jednostka_akademicka/src/main/resources/templates/jezyki.html
+++ b/jednostka_akademicka/src/main/resources/templates/jezyki.html
@@ -12,7 +12,7 @@
     <h1>Jezyki</h1>
 
     <!-- Enter to a new page -->
-    <a href = "/nowy-jezyk">Dodaj nowy jezyk</a>
+    <a href = "/jezyki/nowy-jezyk">Dodaj nowy jezyk</a>
 
     <!-- Table -->
     <table border="1" cellpadding="6">
@@ -34,9 +34,9 @@
             <td th:text="${jezyk.kodJezyka}">Kod Jezyka</td>
             <td th:text="${jezyk.nazwa}">Nazwa</td>
             <td>
-                <a th:href="@{'/edit/' + ${jezyk.nrJezyka}}">Edit</a>
+                <a th:href="@{'/jezyki/edit/' + ${jezyk.nrJezyka}}">Edit</a>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a th:href="@{'/delete/' + ${jezyk.nrJezyka}}">Delete</a>
+                <a th:href="@{'/jezyki/delete/' + ${jezyk.nrJezyka}}">Delete</a>
             </td>
         </tr>
         </tbody>
