--- a/jednostka_akademicka/src/main/resources/templates/nowy-student.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-student.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nowa uczelnia</title>
 </head>
+
 <body>
+<div align="center">
+    <!-- Page header -->
+    <h1>Dodaj nową uczelnie</h1>
+
+    <!-- End line/ new line -->
+    <br />
+
+    <form action = "#" th:action="@{/studenci/save}" th:object="${student}" method="post">
+        <!-- Table -->
+        <table border="1" cellpadding="10">
+
+            <!-- Table first  row -->
+            <tr>
+                <td>Imie</td>
+                <td><input type="text" th:field="*{imie}"></td>
+            </tr>
+            <!-- Second  row -->
+            <tr>
+                <td>Nazwisko</td>
+                <td><input type="text" th:field="*{nazwisko}"></td>
+            </tr>
+            <!-- Third  row -->
+            <tr>
+                <td>Pesel</td>
+                <td><input type="text" th:field="*{pesel}"></td>
+            </tr>
+            <!-- Fourth  row -->
+            <tr>
+                <td>Numer indeksu</td>
+                <td><input type="text" th:field="*{nrIndeksu}"></td>
+            </tr>
+
+            <tr>
+                <td>Plec</td>
+                <td><input type="text" th:field="*{plec}"></td>
+            </tr>
+
+            <tr>
+                <td>Data urodzenia</td>
+                <td><input type="text" th:field="*{dataUrodzenia}"></td>
+            </tr>
+
+            <tr>
+                <td>Email</td>
+                <td><input type="text" th:field="*{email}"></td>
+            </tr>
+
+            <tr>
+                <td>Numer telefonu</td>
+                <td><input type="text" th:field="*{nrTelefonu}"></td>
+            </tr>
+
+            <tr>
+                <td>Stopien studiow</td>
+                <td><input type="text" th:field="*{stopienStudiow}"></td>
+            </tr>
+
+            <tr>
+                <td>Kierunek studiow</td>
+                <td><input type="text" th:field="*{kierunekStudiow}"></td>
+            </tr>
+
+            <tr>
+                <td>Numer uczelni</td>
+                <td><input type="text" th:field="*{nrUczelni}"></td>
+            </tr>
+
+            <tr>
+                <td>Numer Adresu</td>
+                <td><input type="text" th:field="*{nrAdresu}"></td>
+            </tr>
+
+            <!-- Button save-->
+            <tr>
+                <td colspan="2">
+                    <button type="submit"> Save</button> </td>
+            </tr>
+            <!-- Table body -->
+
+        </table>
+    </form>
+</div>
 
 </body>
 </html>
