--- a/jednostka_akademicka/src/main/resources/templates/edytuj-pracownika.html
+++ b/jednostka_akademicka/src/main/resources/templates/edytuj-pracownika.html
@@ -50,6 +50,11 @@
             </tr>
 
             <tr>
+                <td>Data zwolnienia</td>
+                <td><input type="text" th:field="*{dataZatrudnienia}"></td>
+            </tr>
+
+            <tr>
                 <td>Numer telefonu</td>
                 <td><input type="text" th:field="*{nrTelefonu}"></td>
             </tr>
