--- a/jednostka_akademicka/src/main/resources/templates/edytuj-rektora.html
+++ b/jednostka_akademicka/src/main/resources/templates/edytuj-rektora.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <title>Edytuj Uczelnie</title>
 </head>
 <body>
+<div align="center">
+    <h1>Edytuj Uczelnie</h1>
+    <br />
+    <form action="#" th:action="@{/rektorzy/update}" th:object="${rektor}"
+          method="post">
 
+        <table border="0" cellpadding="10">
+            <tr>
+                <td>ID:</td>
+                <td><input type="text" th:field="*{nrRektora}" readonly="readonly" /></td>
+            </tr>
+            <tr>
+                <td>Imie:</td>
+                <td><input type="text" th:field="*{imie}" /></td>
+            </tr>
+            <tr>
+                <td>Nazwisko:</td>
+                <td><input type="text" th:field="*{nazwisko}" /></td>
+            </tr>
+            <tr>
+                <td>Data urodzenia:</td>
+                <td><input type="text" th:field="*{dataUrodzenia}" /></td>
+            </tr>
+            <tr>
+                <td>Numer uczelni:</td>
+                <td><input type="text" th:field="*{nrUczelni}" /></td>
+            </tr>
+            <tr>
+                <td>Numer adresu:</td>
+                <td><input type="text" th:field="*{nrAdresu}" /></td>
+            </tr>
+            <tr>
+                <td colspan="2"><button type="submit">Save</button> </td>
+            </tr>
+        </table>
+    </form>
+</div>
 </body>
-</html>
