Regex na Studenta nie działa

--- a/jednostka_akademicka/src/main/resources/templates/nowy-student.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-student.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Nowa uczelnia</title>
+    <title>Dodaj nowego studenta</title>
 </head>
 
 <body>
 <div align="center">
     <!-- Page header -->
-    <h1>Dodaj nową uczelnie</h1>
+    <h1>Dodaj nowego studenta</h1>
 
     <!-- End line/ new line -->
     <br />
