dalsze walki z security
@GeneratedValue(strategy = GenerationType.IDENTITY) nie dziala

--- a/jednostka_akademicka/src/main/resources/templates/nowy-student.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-student.html
@@ -77,6 +77,10 @@
                 <td>Numer Adresu</td>
                 <td><input type="text" th:field="*{nrAdresu}"></td>
             </tr>
+            <tr>
+                <td>Numer Uzytkownika</td>
+                <td><input type="text" th:field="*{nrUzytkownika}"></td>
+            </tr>
 
             <!-- Button save-->
             <tr>
