--- a/jednostka_akademicka/src/main/resources/templates/edytuj-studenta.html
+++ b/jednostka_akademicka/src/main/resources/templates/edytuj-studenta.html
@@ -76,6 +76,10 @@
                 <td>Numer Adresu</td>
                 <td><input type="text" th:field="*{nrAdresu}"></td>
             </tr>
+            <tr>
+                <td>nr uzytkownika</td>
+                <td><input type="text" th:field="*{nrUzytkownika}" readonly="readonly"></td>
+            </tr>
 
             <!-- Button save-->
             <tr>
