--- a/jednostka_akademicka/src/main/resources/templates/rejestracja.html
+++ b/jednostka_akademicka/src/main/resources/templates/rejestracja.html
@@ -2,18 +2,18 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Rejestracja</title>
+    <title>Title</title>
     <link th:href="@{/css/style-sing-up.css}"    rel="stylesheet"  type="text/css" />
 </head>
 <body>
-<h1>Rejestracja</h1>
+<h1>Register</h1>
 <form th:action="@{/sing-up}" method="post">
     Login:
-    <input type="text" name="username">
-    Password:
-    <input type="text" name="password">
-    Role:
-    <input type="text" name="role">
+    <input type="text" name="login">
+    Haslo:
+    <input type="text" name="haslo">
+    Rola:
+    <input type="text" name="rola">
 
     <input type="submit", value="sing up!">
 
