--- a/jednostka_akademicka/src/main/resources/templates/rejestracja.html
+++ b/jednostka_akademicka/src/main/resources/templates/rejestracja.html
@@ -8,6 +8,8 @@
 <body>
 <h1>Register</h1>
 <form th:action="@{/sing-up}" method="post">
+    Nr uzytkownika:
+    <input type="text" name="nr_uzytkownika">
     Login:
     <input type="text" name="login">
     Haslo:
