wersja prawie koncowa
spora czesc funkcjonalnosci ktorą planowaliśmy zaimpementowac nie dziala, ale ogolnie chyba w miare dobry projekt jeszcze ogarnac zabezpieczanie do konca

--- a/jednostka_akademicka/src/main/resources/templates/edytuj-pracownika.html
+++ b/jednostka_akademicka/src/main/resources/templates/edytuj-pracownika.html
@@ -84,6 +84,11 @@
                 <td><input type="text" th:field="*{nrStanowiska}"></td>
             </tr>
 
+            <tr>
+                <td>nr uzytkownika</td>
+                <td><input type="text" th:field="*{nrUzytkownika}" readonly="readonly"></td>
+            </tr>
+
             <!-- Button save-->
             <tr>
                 <td colspan="2">
