--- a/jednostka_akademicka/src/main/resources/templates/nowy-rektor.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-rektor.html
@@ -43,6 +43,11 @@
                 <td><input type="text" th:field="*{nrAdresu}"></td>
             </tr>
 
+            <tr>
+                <td>NR UZYTKOWNIKA:</td>
+                <td><input type="text" th:field="*{nrUzytkownika}" /></td>
+            </tr>
+
             <!-- Button save-->
             <tr>
                 <td colspan="2">
