--- a/jednostka_akademicka/src/main/resources/templates/edytuj-rektora.html
+++ b/jednostka_akademicka/src/main/resources/templates/edytuj-rektora.html
@@ -38,6 +38,10 @@
                 <td><input type="text" th:field="*{nrAdresu}" /></td>
             </tr>
             <tr>
+                <td>NR UZYTKOWNIKA:</td>
+                <td><input type="text" th:field="*{nrUzytkownika}" readonly="readonly" /></td>
+            </tr>
+            <tr>
                 <td colspan="2"><button type="submit">Save</button> </td>
             </tr>
         </table>
