--- a/jednostka_akademicka/src/main/resources/templates/nowy-pracownik.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-pracownik.html
@@ -79,6 +79,11 @@
                 <td><input type="text" th:field="*{nrStanowiska}"></td>
             </tr>
 
+            <tr>
+                <td>nr uzytkownika</td>
+                <td><input type="text" th:field="*{nrUzytkownika}"></td>
+            </tr>
+
             <!-- Button save-->
             <tr>
                 <td colspan="2">
