--- a/jednostka_akademicka/src/main/resources/templates/pracownicy.html
+++ b/jednostka_akademicka/src/main/resources/templates/pracownicy.html
@@ -34,6 +34,7 @@
             <th>Numer wydzialu</th>
             <th>Numer adresu</th>
             <th>Numer stanowiska</th>
+            <th>Numer uzytkownika</th>
             <th>Akcje</th>
         </tr>
         </thead>
@@ -55,6 +56,7 @@
             <td th:text="${pracownik.nrWydzialu}">Numer wydzialu</td>
             <td th:text="${pracownik.nrAdresu}">Numer adresu</td>
             <td th:text="${pracownik.nrStanowiska}">Numer stanowiska</td>
+            <td th:text="${pracownik.nrUzytkownika}">numer uzytkownika</td>
             <td>
                 <a th:href="@{'/pracownicy/edit/' + ${pracownik.nrPracownika}}">Edit</a>
                 &nbsp;&nbsp;&nbsp;
