--- a/jednostka_akademicka/src/main/resources/templates/studenci.html
+++ b/jednostka_akademicka/src/main/resources/templates/studenci.html
@@ -14,6 +14,7 @@
 
     <!-- Enter to a new page -->
     <a href = "/studenci/nowy-student">Dodaj nowego studenta</a>
+    <p style="line-height: 1cm; ">
 
     <!-- Table -->
     <table border="1" cellpadding="10">
