--- a/jednostka_akademicka/src/main/resources/templates/uzytkownicy.html
+++ b/jednostka_akademicka/src/main/resources/templates/uzytkownicy.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Uzytkownicy</title>
+    <link th:href="@{/css/style-sing-up.css}"    rel="stylesheet"  type="text/css" />
 </head>
 
 <body>
