--- a/jednostka_akademicka/src/main/resources/templates/naukowi.html
+++ b/jednostka_akademicka/src/main/resources/templates/naukowi.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Naukowo dydaktyczni</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -13,6 +14,7 @@
 
     <!-- Enter to a new page -->
     <a href = "/naukowi/nowy-naukowy">Dodaj nowego pracownika naukowo dydaktycznego</a>
+    <p style="line-height: 1cm; ">
 
     <!-- Table -->
     <table border="1" cellpadding="6">
