--- a/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-jezyk.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nowy jezyk</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
