--- a/jednostka_akademicka/src/main/resources/templates/nowy-pracownik.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-pracownik.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Nowy Pracownika</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div align="center">
