--- a/jednostka_akademicka/src/main/resources/templates/nowy-wydzial.html
+++ b/jednostka_akademicka/src/main/resources/templates/nowy-wydzial.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nowy wydział</title>
+    <link th:href="@{/css/style-sing-up.css}"    rel="stylesheet"  type="text/css" />
 </head>
 
 <body>
