--- a/jednostka_akademicka/src/main/resources/templates/uczelnie.html
+++ b/jednostka_akademicka/src/main/resources/templates/uczelnie.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Uczelnie</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -13,6 +14,7 @@
 
         <!-- Enter to a new page -->
         <a href = "/uczelnie/nowa-uczelnia">Dodaj nową uczelnie</a>
+        <p style="line-height: 1cm; ">
 
         <!-- Table -->
         <table border="1" cellpadding="10">
