--- a/jednostka_akademicka/src/main/resources/templates/wydzialy.html
+++ b/jednostka_akademicka/src/main/resources/templates/wydzialy.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wydzialy</title>
+    <link th:href="@{/css/style-sing-up.css}"    rel="stylesheet"  type="text/css" />
 </head>
 
 <body>
@@ -13,6 +14,7 @@
 
     <!-- Enter to a new page -->
     <a href = "/wydzialy/nowy-wydzial">Dodaj nowy wydzial</a>
+    <p style="line-height: 1cm; ">
 
     <!-- Table -->
     <table border="1" cellpadding="10">
